--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.5.6",
     "@strapi/strapi": "4.5.6",
     "mysql": "2.18.1",
+    "node-fetch": "^3.3.0",
     "stripe": "^11.6.0"
   },
   "author": {
