--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
